fixes dark mode errors

--- a/src/components/AuthButton/styles.module.scss
+++ b/src/components/AuthButton/styles.module.scss
@@ -26,7 +26,7 @@
     padding: 12px 20px;
     background: linear-gradient(60deg, #0075FF, #0056b8);
     background-position-x: right;
-    color: var(--foreground-1);
+    color: white;
     display: flex;
     flex-direction: row;
     width: 100%;
