--- a/src/components/ForwardButton/styles.module.scss
+++ b/src/components/ForwardButton/styles.module.scss
@@ -19,7 +19,7 @@
         }
 
         span {
-            color: var(--foreground-1);
+            color: var(--foreground-1) !important;
         }
     }
 }
