--- a/src/components/PrimaryButton/styles.module.scss
+++ b/src/components/PrimaryButton/styles.module.scss
@@ -30,7 +30,7 @@
         }
 
         &.grey {
-            background: var(--background-2);
+            background: var(--background-1);
             color: var(--foreground-2);
         }
     }
