--- a/src/components/Searchbar/styles.module.scss
+++ b/src/components/Searchbar/styles.module.scss
@@ -159,7 +159,7 @@
     transform: translateY(-150%);
     left: 15px;
     font-size: 14px;
-    background: linear-gradient(to bottom, var(--background-2));
+    background: var(--background-2);
     color: var(--primary-1);
 }
 
