--- a/src/components/Tabs/styles.module.scss
+++ b/src/components/Tabs/styles.module.scss
@@ -12,6 +12,7 @@
     border-bottom-style: solid;
     border-bottom-color: var(--border-1);
     background: var(--background-2);
+    color: var(--foreground-1);
     padding: 16px;
     text-align: center;
     cursor: pointer;
@@ -21,6 +22,5 @@
         border-bottom-color: var(--primary-1);
         background: var(--primary-2);
         color: var(--primary-1);
-
     }
 }
